// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error with no input 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Enter Todo....."
        type="text"
        value=""
      />
      <div
        className="invalid-feedback"
      />
    </div>
    <button
      className="btn btn-primary"
    >
      Add
    </button>
  </form>
</div>
`;

exports[`should render error with no input 2`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control is-invalid"
        onChange={[Function]}
        placeholder="Enter Todo....."
        type="text"
        value=""
      />
      <div
        className="invalid-feedback"
      >
        Please Enter Todo
      </div>
    </div>
    <button
      className="btn btn-primary"
    >
      Add
    </button>
  </form>
</div>
`;

exports[`should render todo form correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Enter Todo....."
        type="text"
        value=""
      />
      <div
        className="invalid-feedback"
      />
    </div>
    <button
      className="btn btn-primary"
    >
      Add
    </button>
  </form>
</div>
`;
